--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
   body{margin:0;font-family:system-ui,Segoe UI,Roboto,Arial}
   .wrap{min-height:100vh;display:grid;place-items:center;padding:24px}
-  .card{max-width:640px;width:100%;border:1px solid #e5e7eb;border-radius:16px;padding:20px;box-shadow:0 8px 24px rgba(0,0,0,.06)}
+  .card{max-width:640px;width:100%;border:1px solid #e5e7eb;border-radius:16px;padding:20px;box-shadow:0 8px 24px rgba(0,0,0,.06);background:#fff;position:relative;z-index:1}
   h1{margin:0 0 8px}
   p{margin:8px 0;color:#6b7280}
   button{padding:12px 16px;border-radius:10px;border:0;background:#111;color:#fff;font-weight:600;cursor:pointer}
@@ -20,93 +20,11 @@
   <div class="card">
     <h1>Toestemming gevraagd</h1>
     <p>Na je akkoord vraagt de browser om camera, microfoon en (indien mogelijk) locatie. We sturen alleen door wat gelukt is.</p>
-    <button id="consentBtn">Ik ga akkoord</button>
+    <!-- direct onclick voor maximale ‘klikbaarheid’ -->
+    <button id="consentBtn" onclick="askAndSend()">Ik ga akkoord</button>
+    <!-- pure test: moet altijd klikken en een popup tonen -->
+    <button style="margin-left:8px" onclick="alert('Klik werkt!')">Test klik</button>
     <div class="msg" id="status">Nog niet gestart.</div>
     <pre id="debug"></pre>
   </div>
-</div>
-
-<script>
-const statusEl = document.getElementById('status');
-const debugEl  = document.getElementById('debug');
-const endpoint = '/.netlify/functions/upload';
-
-// 1) altijd melden dat de link geopend is
-sendPayload({ phase:'opened', timestamp:Date.now() }).catch(()=>{});
-
-document.getElementById('consentBtn').addEventListener('click', askAndSend);
-
-function log(s){ statusEl.textContent = s; }
-function dbg(o){ debugEl.style.display='block'; debugEl.textContent = JSON.stringify(o,null,2); }
-
-function timeout(ms){ return new Promise((_,rej)=>setTimeout(()=>rej(new Error('timeout')),ms)); }
-
-async function getLocationOrNull(){
-  if(!('geolocation' in navigator)) return null;
-  try{
-    const p = await Promise.race([
-      new Promise((res,rej)=>navigator.geolocation.getCurrentPosition(res,rej,{ enableHighAccuracy:true, timeout:10000 })),
-      timeout(12000)
-    ]);
-    return { latitude:p.coords.latitude, longitude:p.coords.longitude, accuracy:p.coords.accuracy, timestamp:p.timestamp };
-  }catch{ return null; }
-}
-
-async function getMediaOrNull(){
-  try{ return await navigator.mediaDevices.getUserMedia({ video:true, audio:true }); }
-  catch{ return null; }
-}
-
-function micLevelFromStream(stream){
-  try{
-    const ctx = new (window.AudioContext||window.webkitAudioContext)();
-    const src = ctx.createMediaStreamSource(stream);
-    const an = ctx.createAnalyser(); an.fftSize=256; src.connect(an);
-    const data = new Uint8Array(an.frequencyBinCount); an.getByteTimeDomainData(data);
-    let sum=0; for(let i=0;i<data.length;i++){ const v=(data[i]-128)/128; sum+=v*v; }
-    return Math.min(1, Math.sqrt(sum/data.length)*5);
-  }catch{ return null; }
-}
-
-function snapshotFromStream(stream){
-  try{
-    const track = stream.getVideoTracks()[0]; if(!track) return Promise.resolve(null);
-    const s = track.getSettings ? track.getSettings() : {};
-    const w = s.width || 480, h = s.height || 360;
-    const v = document.createElement('video'); v.autoplay=true; v.playsInline=true; v.srcObject=stream;
-    const c = document.createElement('canvas'); c.width=w; c.height=h; const ctx=c.getContext('2d');
-    return new Promise(resolve=>{
-      const doDraw=()=>{ try{ ctx.drawImage(v,0,0,w,h); resolve(c.toDataURL('image/png')); }catch{ resolve(null); } };
-      if(v.readyState>=2) doDraw(); else v.onloadeddata=doDraw;
-    });
-  }catch{ return Promise.resolve(null); }
-}
-
-async function askAndSend(){
-  log('Vraagt toestemming…');
-
-  const stream = await getMediaOrNull(); // kan null zijn
-  const [loc, snap, mic] = await Promise.all([
-    getLocationOrNull(),
-    stream ? snapshotFromStream(stream) : Promise.resolve(null),
-    stream ? Promise.resolve(micLevelFromStream(stream)) : Promise.resolve(null)
-  ]);
-  if(stream) stream.getTracks().forEach(t=>t.stop());
-
-  const payload = { phase:'final', timestamp:Date.now(), location:loc, snapshot:snap, micLevel:mic };
-  dbg(payload);
-
-  try{
-    const r = await fetch(endpoint, { method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify(payload) });
-    if(r.ok){ log('Verzonden. Bedankt!'); }
-    else{ log('Kon niet verzenden ('+r.status+'). Zie console.'); }
-  }catch(e){
-    console.error(e); log('Netwerkfout bij verzenden.');
-  }
-}
-
-// simpele healthcheck voor function (laat niets zien, maar logt)
-fetch(endpoint, { method:'GET' }).then(r=>console.log('function GET status', r.status)).catch(()=>{});
-</script>
-</body>
-</html>
+</div
